# You-Vid

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  build.rs  index.html  rust-toolchain.toml  rustfmt.toml
backend/: Cargo.toml
backend/src/: api.rs  main.rs  users.rs
backend/src/api/: users.rs
client/: Cargo.toml  index.html
common/: Cargo.toml
common/src/: api.rs  lib.rs
common/src/api/: error.rs  login.rs  user.rs  users.rs
common/src/api/users/: login.rs
frontend/: Cargo.toml  index.html
frontend/.cargo/: config.toml
frontend/client/: Cargo.toml  index.html
frontend/client/src/: lib.rs
frontend/client/static/css/: global.css
frontend/client/static/js/: init.js
frontend/server/: Cargo.toml
frontend/server/src/: lib.rs
frontend/src/: app.rs  components.rs  lib.rs  routes.rs
frontend/src/components/: alert.rs
frontend/src/routes/: home.rs  login.rs  not_found.rs
frontend/static/css/: global.css  uikit.min.css
frontend/static/js/: init.js
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: client.rs  frontend.rs  index.html  lib.rs  main.rs
