[package]
name = "you-vid-backend"
version = "0.1.0"
authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.2", features = ["fs", "trace"] }
once_cell = "1.9"
