[package]
name = "you-vid-backend"
version = "0.1.0"
authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.9"
tower = "0.4"
tower-http = { version = "0.2", features = ["fs", "trace"] }
axum = "0.4"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.5"
tracing = "0.1"
