[package]
name = "backend"
version = "0.1.0"
authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9"
tide = "0.16"
tide-tracing = "0.0"
tide-compress = "0.9"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.5"
tracing = "0.1"
dryoc = { version = "0.3", features = ["serde"] }
sled = "0.34"
common = { path = "../common" }
frontend-server = { path = "../frontend/server" }
