[package]
name = "frontend"
version = "0.1.0"
authors = ["TheBotlyNoob <jj@jj.is-a.dev>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = "0.4"

# frontend
yew = "0.19"
js-sys = "0.3"
gloo = "0.6"
yew-router = "0.16"
web-sys = { version = "0.3", features = [
  "Response",
  "Request",
  "RequestInit",
  "Window",
] }
serde = { version = "1.0.80", features = ["derive"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"

common = { path = "../common" }
