[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tide = "0.16"
client = { path = "../client" }

[build-dependencies]
fs_extra = "1"
sass-rs = "0.2"
anyhow = "1"
walkdir = "2"
rand = "0.8"
wasm-pack = "0.10"
html-minifier = "3.0"