[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
rust-embed = { version = "6.3", features = ["interpolate-folder-path"] }
lazy_static = "1.0"
futures = "0.3"
client = { path = "../client" }

[build-dependencies]
fs_extra = "1"
sass-rs = "0.2"
anyhow = "1"
walkdir = "2"
rand = "0.8"
wasm-pack = "0.10"
html-minifier = "3.0"